Fix bug composing text with IME immediately after non-editable element

When an IME tries to set a composition immediately after a non-editable element
inside an editable region, it's possible for the selection base to get stuck
inside the non-editable region, in which case the attempt to replace the
selection fails. The fix is to pass the kCanSkipOverEditingBoundary flag when we
call MostForwardCaretPosition() on the selection base so we can find the actual
editable region.

Bug: 790777,801441
Change-Id: I1014901742671f6fbb153c7117eaa1b271a265f7
Reviewed-on: https://chromium-review.googlesource.com/879839
Commit-Queue: Ryan Landay <rlanday@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531330}
Former-commit-id: 15af5c52502c2921a759b9a72dea76aa70bac14d